tests/compile-fail/attr_on_type.stderr
error: couldn't parse trait item

note: expected `trait`

note: the #[auto_impl] attribute can only be applied to traits!
 --> $DIR/attr_on_type.rs:5:1
  |
5 | type Baz = String;
  | ^^^^
